--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@dnd-kit-svelte/utilities": "^0.0.8",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@internationalized/date": "^3.8.1",
 		"@lucide/svelte": "^0.482.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
@@ -35,7 +36,7 @@
 		"@testing-library/svelte": "^5.2.4",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
-		"bits-ui": "^1.8.0",
+		"bits-ui": "^2.1.0",
 		"clsx": "^2.1.1",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
@@ -45,14 +46,16 @@
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
 		"layerchart": "^2.0.0-next.10",
+		"node": "^22.16.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-sonner": "^1.0.3",
+		"sveltekit-superforms": "^2.25.0",
 		"tailwind-merge": "^3.3.0",
-		"tailwind-variants": "^0.2.1",
+		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "^5.0.0",
@@ -63,6 +66,7 @@
 		"zod": "^3.25.28"
 	},
 	"dependencies": {
+		"formsnap": "^2.0.1",
 		"pocketbase": "^0.26.0"
 	}
 }
