feat: Add security audit for the application

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,88 @@
 # Environment Variables for BlendSphere Frontend
+# Security-focused configuration for development and production
+
+# ====================
+# CORE CONFIGURATION
+# ====================
+
+# Node Environment (development, production, test)
+NODE_ENV=development
 
 # PocketBase Configuration
-VITE_POCKETBASE_URL=http://localhost:8090
+PUBLIC_POCKETBASE_URL=http://localhost:8090
 
-# Security Configuration
+# ====================
+# SECURITY CONFIGURATION
+# ====================
+
+# Application Metadata
 VITE_APP_NAME=BlendSphere
 VITE_APP_VERSION=1.0.0
 
-# Session Configuration (in minutes)
-VITE_SESSION_TIMEOUT=30
+# Debug and Logging Configuration
+VITE_DEBUG_MODE=false
+VITE_LOG_LEVEL=info
 
-# Rate Limiting (requests per minute)
-VITE_LOGIN_RATE_LIMIT=5
-VITE_SIGNUP_RATE_LIMIT=3
+# Content Security Policy Headers
+VITE_CSP_DEFAULT_SRC='self'
+VITE_CSP_SCRIPT_SRC='self' 'unsafe-inline'
+VITE_CSP_STYLE_SRC='self' 'unsafe-inline' https://fonts.googleapis.com
+VITE_CSP_IMG_SRC='self' data: https:
+VITE_CSP_FONT_SRC='self' https://fonts.gstatic.com
+VITE_CSP_CONNECT_SRC='self' ws://localhost:* wss://localhost:* https:
 
-# Password Requirements
-VITE_MIN_PASSWORD_LENGTH=8
+# ====================
+# RATE LIMITING CONFIGURATION
+# ====================
 
-# Production Security Headers (for deployment)
-# Content Security Policy
-VITE_CSP_DEFAULT_SRC="'self'"
-VITE_CSP_SCRIPT_SRC="'self' 'unsafe-inline'"
-VITE_CSP_STYLE_SRC="'self' 'unsafe-inline'"
-VITE_CSP_IMG_SRC="'self' data: https:"
+# Login Rate Limiting
+VITE_RATE_LIMIT_LOGIN_ATTEMPTS=5
+VITE_RATE_LIMIT_LOGIN_WINDOW=60000
 
-# Feature Flags
+# Signup Rate Limiting
+VITE_RATE_LIMIT_SIGNUP_ATTEMPTS=3
+VITE_RATE_LIMIT_SIGNUP_WINDOW=60000
+
+# ====================
+# SESSION MANAGEMENT
+# ====================
+
+# Session timeout in milliseconds (default: 30 minutes)
+VITE_SESSION_TIMEOUT=1800000
+
+# Session renewal threshold in milliseconds (default: 5 minutes)
+VITE_SESSION_RENEW_THRESHOLD=300000
+
+# ====================
+# FEATURE FLAGS
+# ====================
+
+# Security Features
+VITE_ENABLE_SECURITY_LOGGING=true
+VITE_ENABLE_RATE_LIMITING=true
+VITE_ENABLE_FINGERPRINTING=true
+
+# Application Features
 VITE_ENABLE_REGISTRATION=true
 VITE_ENABLE_PASSWORD_RESET=true
 
-# Development/Debug Flags
-VITE_DEBUG_MODE=false
-VITE_LOG_LEVEL=info
+# Development Features (disable in production)
+VITE_MOCK_SECURITY_EVENTS=false
+
+# ====================
+# PASSWORD SECURITY
+# ====================
+
+# Password strength requirements
+VITE_MIN_PASSWORD_LENGTH=8
+
+# ====================
+# PRODUCTION OVERRIDES
+# ====================
+# For production deployment, override these values:
+# NODE_ENV=production
+# PUBLIC_POCKETBASE_URL=https://your-pocketbase-domain.com
+# VITE_DEBUG_MODE=false
+# VITE_LOG_LEVEL=error
+# VITE_CSP_SCRIPT_SRC='self' (remove unsafe-inline)
+# VITE_MOCK_SECURITY_EVENTS=false
