--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
 		"lint:all": "npm run format:check && npm run lint && npm run check",
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run",
-		"validate": "npm run lint:all && npm run test"
+		"test:security": "vitest run src/lib/utils/security.test.ts",
+		"validate": "npm run lint:all && npm run test",
+		"security:audit": "npm audit --audit-level=moderate",
+		"security:audit:fix": "npm audit fix",
+		"security:audit:force": "npm audit fix --force",
+		"security:check": "npm run security:audit && npm run test:security",
+		"security:scan": "npm run lint -- --ext .js,.ts,.svelte --rule 'security/*: error'",
+		"security:full": "npm run security:check && npm run security:scan"
 	},
 	"devDependencies": {
 		"@dnd-kit-svelte/core": "^0.0.8",
@@ -40,12 +47,14 @@
 		"@testing-library/svelte": "^5.2.8",
 		"@types/d3-scale": "^4.0.9",
 		"@types/d3-shape": "^3.1.7",
+		"@types/node": "^22.15.23",
 		"bits-ui": "^2.1.0",
 		"clsx": "^2.1.1",
 		"d3-scale": "^4.0.2",
 		"d3-shape": "^3.2.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-security": "^3.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
 		"husky": "^9.1.7",
@@ -96,16 +105,20 @@
 		"@tiptap/pm": "^2.12.0",
 		"@tiptap/starter-kit": "^2.12.0",
 		"@tiptap/suggestion": "^2.12.0",
+		"@types/sanitize-html": "^2.16.0",
 		"formsnap": "^2.0.1",
+		"helmet": "^8.1.0",
 		"katex": "^0.16.22",
 		"lowlight": "^3.3.0",
 		"lucide-svelte": "^0.511.0",
 		"pocketbase": "^0.26.0",
+		"sanitize-html": "^2.17.0",
 		"svelte-tiptap": "^2.1.0",
 		"tippy.js": "^6.3.7",
 		"tiptap-extension-auto-joiner": "^0.1.3",
 		"tiptap-extension-global-drag-handle": "^0.1.18",
-		"tiptap-markdown": "^0.8.10"
+		"tiptap-markdown": "^0.8.10",
+		"validator": "^13.15.15"
 	},
 	"lint-staged": {
 		"*.{js,ts,svelte}": [
