fix: security settings

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ VITE_CSP_SCRIPT_SRC='self' 'unsafe-inline'
 VITE_CSP_STYLE_SRC='self' 'unsafe-inline' https://fonts.googleapis.com
 VITE_CSP_IMG_SRC='self' data: https:
 VITE_CSP_FONT_SRC='self' https://fonts.gstatic.com
-VITE_CSP_CONNECT_SRC='self' ws://localhost:* wss://localhost:* https:
+VITE_CSP_CONNECT_SRC='self' http://localhost:* ws://localhost:* wss://localhost:* https:
 
 # ====================
 # RATE LIMITING CONFIGURATION
