feat(flashcards): flashcard creator, integration with AI generator feat(reviews): flashcard reviews, no integration with SRS

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,19 @@
 # Node Environment (development, production, test)
 NODE_ENV=development
 
+# Vite Development Server Configuration
+PORT=3000
+HOST=localhost
+
 # PocketBase Configuration
 PUBLIC_POCKETBASE_URL=http://localhost:8090
+
+# AI Service Configuration (FastAPI backend)
+VITE_AI_SERVICE_URL=http://localhost:8001
+VITE_ENABLE_MOCK_AI=true
+
+# SRS API Configuration (FastAPI backend)
+VITE_SRS_API_URL=http://localhost:8001
 
 # ====================
 # SECURITY CONFIGURATION
@@ -81,8 +92,13 @@ VITE_MIN_PASSWORD_LENGTH=8
 # ====================
 # For production deployment, override these values:
 # NODE_ENV=production
+# PORT=8080
+# HOST=0.0.0.0
 # PUBLIC_POCKETBASE_URL=https://your-pocketbase-domain.com
+# VITE_AI_SERVICE_URL=https://your-ai-api-domain.com
+# VITE_SRS_API_URL=https://your-srs-api-domain.com
 # VITE_DEBUG_MODE=false
 # VITE_LOG_LEVEL=error
 # VITE_CSP_SCRIPT_SRC='self' (remove unsafe-inline)
 # VITE_MOCK_SECURITY_EVENTS=false
+# VITE_ENABLE_MOCK_AI=false
